# GroupTC-HS-BS

./: .gitignore  CMakeLists.txt  NsightEclipse.xml  README.md  data  dataset_app
build01/: CMakeCache.txt  Makefile  cmake_install.cmake
build02/: CMakeCache.txt  Makefile  cmake_install.cmake
config/: config.ini  nvprof.conf
data_getter/g500/: run.sh
data_getter/snap/: WgetSNAPData.sh
example/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.ini  main.cu
include/: main.h
include/comm/: comm.h  config_comm.h  constant_comm.h  cuda_comm.h
include/datatransfer/: csr2dcsr_data_transfer.h  csr2hash_dcsr_data_transfer.h  csr2rid_dcsr_data_transfer.h  csr2trust_dcsr_data_transfer.h  data_transfer.h
include/graph/: cpu_graph.h  cuda_graph_comm.h  gpu_graph.h
include/ini/: INIReader.h
log/Bisson/: cache_prof.txt  prof_output.txt  time_output.txt
log/Fox/: cache_prof.txt  preprocessing_time_output.txt  prof_output.txt  time_output.txt
log/Green/: cache_prof.txt  prof_output.txt  time_output.txt
log/GroupTC/: cache_prof.txt  prof_output.txt  time_output.txt
log/GroupTC-HASH/: cache_prof.txt  prof_output.txt  time_output.txt
log/GroupTC-OPT/: cache_prof.txt  prof_output.txt  time_output.txt
log/H-INDEX/: cache_prof.txt  prof_output.txt  time_output.txt
log/Hu/: cache_prof.txt  preprocessing_time_output.txt  prof_output.txt  time_output.txt
log/Polak/: cache_prof.txt  prof_output.txt  time_output.txt
log/TRUST/: cache_prof.txt  prof_output.txt  time_output.txt
log/TriCore/: cache_prof.txt  prof_output.txt  time_output.txt
log/csr2dcsr/: time_output.txt
log/csr2rid_dcsr/: time_output.txt
log/csr2trust_dcsr/: time_output.txt
log_TvsG/GroupTC-HASH/: time_output.txt
log_TvsG/TRUST/: time_output.txt
log_TvsG/csr2dcsr/: time_output.txt
log_TvsG/csr2rid_dcsr/: time_output.txt
log_TvsG/csr2trust_dcsr/: time_output.txt
log_all/Fox/: preprocessing_time_output.txt
log_all/GroupTC/: time_output.txt
log_all/Hu/: preprocessing_time_output.txt
log_all/TRUST/: cache_prof.txt  prof_output.txt
log_all/csr2dcsr/: time_output.txt
log_all/csr2rid_dcsr/: time_output.txt
log_all/csr2trust_dcsr/: time_output.txt
log_g500/Bisson/: time_output.txt
log_g500/Fox/: preprocessing_time_output.txt  time_output.txt
log_g500/Green/: time_output.txt
log_g500/GroupTC/: time_output.txt
log_g500/GroupTC-HASH/: time_output.txt
log_g500/GroupTC-OPT/: time_output.txt
log_g500/H-INDEX/: time_output.txt
log_g500/Hu/: preprocessing_time_output.txt  time_output.txt
log_g500/Polak/: time_output.txt
log_g500/TRUST/: time_output.txt
log_g500/TriCore/: time_output.txt
log_g500/csr2dcsr/: time_output.txt
log_g500/csr2rid_dcsr/: time_output.txt
log_g500/csr2trust_dcsr/: time_output.txt
log_g500new/GroupTC-HASH/: time_output.txt
log_g500new/GroupTC-OPT/: time_output.txt
log_g500new/Polak/: time_output.txt
log_g500new/TRUST/: time_output.txt
log_g500new/csr2dcsr/: time_output.txt
log_g500new/csr2rid_dcsr/: time_output.txt
log_g500new/csr2trust_dcsr/: time_output.txt
log_temp/TRUST/: time_output.txt
log_temp/csr2dcsr/: time_output.txt
log_temp/csr2rid_dcsr/: time_output.txt
log_temp/csr2trust_dcsr/: time_output.txt
log_temp12-01/GroupTC-HASH/: time_output.txt
log_temp12-01/GroupTC-OPT/: time_output.txt
log_temp12-01/Polak/: time_output.txt
log_temp12-03-v2_xiaorong/GroupTC-OPT/: time_output.txt
log_temp12-03-v2_xiaorong/csr2dcsr/: time_output.txt
log_temp12-03-v2_xiaorong/csr2rid_dcsr/: time_output.txt
log_temp12-03-v2_xiaorong/csr2trust_dcsr/: time_output.txt
log_temp12-04-v1_duibi/GroupTC-OPT/: time_output.txt
log_temp12-04-v1_duibi/csr2dcsr/: time_output.txt
log_temp12-04-v1_duibi/csr2rid_dcsr/: time_output.txt
log_temp12-04-v1_duibi/csr2trust_dcsr/: time_output.txt
log_temp12-05-v1/GroupTC-OPT/: time_output.txt
log_temp12-05-v1/csr2dcsr/: time_output.txt
log_temp12-05-v1/csr2rid_dcsr/: time_output.txt
log_temp12-05-v1/csr2trust_dcsr/: time_output.txt
log_temp12-06-v2/TRUST/: time_output.txt
log_temp12-06-v2/csr2dcsr/: time_output.txt
log_temp12-06-v2/csr2rid_dcsr/: time_output.txt
log_temp12-06-v2/csr2trust_dcsr/: time_output.txt
log_trustVSgrouptc/GroupTC-HASH/: time_output.txt
log_trustVSgrouptc/TRUST/: time_output.txt
log_trustVSgrouptc/csr2dcsr/: time_output.txt
log_trustVSgrouptc/csr2rid_dcsr/: time_output.txt
log_trustVSgrouptc/csr2trust_dcsr/: time_output.txt
log_trust_and_GroupTC-hash/GroupTC-HASH/: time_output.txt
log_trust_and_GroupTC-hash/TRUST/: time_output.txt
log_trust_and_GroupTC-hash/csr2dcsr/: time_output.txt
log_trust_and_GroupTC-hash/csr2rid_dcsr/: time_output.txt
log_trust_and_GroupTC-hash/csr2trust_dcsr/: time_output.txt
log_trust_twopart/csr2rid_dcsr/: time_output.txt
log_trust_twopart/csr2trust_dcsr/: time_output.txt
profile/: nohup.out  prof-all.sh  prof-bisson.sh  prof-fox.sh  prof-green.sh  prof-grouptc-hash.sh  prof-grouptc-opt.sh  prof-grouptc.sh  prof-h-index.sh  prof-hu.sh  prof-polak.sh  prof-tricore.sh  prof-trust.sh
profile/config/: config-bisson.ini  config-fox.ini  config-green.ini  config-grouptc-cuckoo.ini  config-grouptc-hash-v2.ini  config-grouptc-hash.ini  config-grouptc-opt.ini  config-grouptc.ini  config-h-index.ini  config-hu.ini  config-polak.ini  config-tricore.ini  config-trust.ini
src/: main.cu
src/comm/: config_comm.cpp  constant_comm.cpp
src/datatransfer/: csr2dcsr_data_transfer.cu  csr2hash_dcsr_data_transfer.cu  csr2rid_dcsr_data_transfer.cu  data_transfer.cu  (+1 more)
test/: main.cu  main_no_index.cu
xxxxx/: data  readfile.py  xxx.py
xxxxx/preprocessing_lib/: CMakeLists.txt
xxxxx/preprocessing_lib/include/: comm.h  constant_comm.h  csr2dcsr_data_transfer.h  csr2rid_dcsr_data_transfer.h  csr2trust_dcsr_data_transfer.h  cuda_comm.h  cuda_graph_comm.h  data_transfer.h  gpu_graph.h  graph.h
xxxxx/preprocessing_lib/src/: csr2dcsr_data_transfer.cu  csr2rid_dcsr_data_transfer.cu  csr2trust_dcsr_data_transfer.cu  cuda_graph_comm.cu  data_transfer.cu  gpu_graph.cu  graph.cpp  main.cu
(+413 files in other folders)
